syntax = "proto2";
package ps.math.proto;

enum ModuleCommandID {
  kSelectSubGame = 1;
  kSelectVolatile = 2;
  kSpinIndex = 3;
  kSetCollectCnt = 4;
  kSetMultiBet = 5;
  kExtraData = 6;
}

message ModuleCommandHeader{
	required ModuleCommandID id = 1;
}

message SelectSubGameCommand{
	//----------ModuleCommandHeader Begin----------
	required ModuleCommandID id = 1[default=kSelectSubGame];
	//-----------ModuleCommandHeader End-----------
	repeated uint32	sub_game_id = 2;
}

message SelectVolatileCommand{
	//----------ModuleCommandHeader Begin----------
	required ModuleCommandID id = 1[default=kSelectVolatile];
	//-----------ModuleCommandHeader End-----------
	required uint32	volatile_id = 2;
}

message SpinIndexCommand{
	//----------ModuleCommandHeader Begin----------
	required ModuleCommandID id = 1[default=kSpinIndex];
	//-----------ModuleCommandHeader End-----------
	required uint32 spin_idx = 2[default=0];
	// 0:normal spin, 1:reel1, 2:reel2, ....
}

message SetCollectCntCommand{
	//----------ModuleCommandHeader Begin----------
	required ModuleCommandID id = 1[default=kSelectVolatile];
	//-----------ModuleCommandHeader End-----------
	required uint32	CollectCnt = 2;
	required uint32	CurrentTotalBet = 3;
}

message SetMultiBetCommand{
	//----------ModuleCommandHeader Begin----------
	required ModuleCommandID id = 1[default=kSetMultiBet];
	//-----------ModuleCommandHeader End-----------
	repeated uint32	MultiBetList = 2;
}

message ExtraDataCommand{
	//----------ModuleCommandHeader Begin----------
	required ModuleCommandID id = 1[default=kExtraData];
	required uint32 index = 2;
	//-----------ModuleCommandHeader End-----------
	repeated int32 data = 3;
}
